# SoftRenderPipeline

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/include/: Ray.h  camera.h  film.h  model.h  plane.h  ray.h  rgb.h  scene.h  shape.h  sphere.h  thread_pool.h  triangle.h
source/include/accelerate/: bounds.h  bvh.h
source/include/camera/: film.h  ray.h
source/include/renderer/: base_renderer.h  normal_renderer.h  raytracing_renderer.h
source/include/shape/: material.h  model.h  plane.h  scene.h  shape.h  sphere.h
source/include/thread/: spin_lock.hpp  thread_pool.h
source/include/util/: color.h  frame.h  profile.h  progress.h  rng.hpp
source/src/: camera.cpp  film.cpp  frame.cpp  main.cpp  model.cpp  plane.cpp  ray.cpp  rgb.cpp  scene.cpp  sphere.cpp  thread_pool.cpp  triangle.cpp
source/src/accelerate/: bounds.cpp  bvh.cpp
source/src/camera/: camera.cpp  film.cpp  ray.cpp
source/src/renderer/: base_renderer.cpp  normal_renderer.cpp  raytracing_renderer.cpp
source/src/shape/: model.cpp  plane.cpp  scene.cpp  sphere.cpp  triangle.cpp
source/src/thread/: thread_pool.cpp
source/src/util/: color.cpp  frame.cpp  profile.cpp  progeress.cpp  rgb.cpp
src/: CMakeLists.txt  main.cpp
